# core

./: .clang-format  .editorconfig  .gitignore  AGENTS.md  BOXDECODE_BF16_DOMAIN_FIX.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Model_fix.md  Model_fix_implementation.md  PROBLEM2_RUNTIME_VERIFICATION_RESULTS.md  PROBLEM2_TERMINAL_OUTPUT_CONTRACT_PLAN.md  README.md  THIRD_PARTY_NOTICES.md  YOLO26_DIRECT_C16_FIX.md  benchmark_update.md  build.sh  findings_compatibility.md  graph_documentation_plan.md  graph_metrics_implementation_plan.md  graph_metrics_specific_implementation.md  lttng_plugin_latency_implementation_plan.md  pyproject.toml  revisited_documentation_plan.md
examples/: 4PipesYOLOMetadataReceiver.cpp  4PipesYOLOOptiview.cpp  CMakeLists.txt  GraphPipesYOLOMetadataReceiver.cpp  GraphPipesYOLOOptiview.cpp  MultiCameraUDPYOLOv8.cpp  OneCameraYOLOMetadataReceiver.cpp  OneCameraYOLOOptiview.cpp  asset_utils.h  depth_anything_v2.cpp  example_utils.cpp  example_utils.h  fcn_hrnet_seg_overlay.cpp  graphpipes_metadata_receiver_helpers.cpp  graphpipes_metadata_receiver_helpers.h  graphpipes_optiview_helpers.cpp  graphpipes_optiview_helpers.h  midas_v21_rtsp.cpp  model_resnet50.cpp  modelmpk_resnet50.cpp  pipelinesession_resnet50.cpp  rtsp_list.metadata_receiver.txt  rtsp_server.cpp  usb_mjpeg_yolov8_demo.cpp  yolov5_seg_overlay.cpp  yolov8_coco_tput.cpp  yolov8_multi_rtsp_demo.cpp  yolov8n_seg_detess_simple.cpp
examples/support/: obj_detection_utils.cpp  obj_detection_utils.h
examples/utils/: gst_receiver.sh  run_rtsp_server.sh  stream_cam.sh
pcie_host/: CMakeLists.txt  README.md  build.sh
pcie_host/cmake/: SimaPCIeHostConfig.cmake.in
pcie_host/examples/: CMakeLists.txt  sima_pcie_image_smoke.cpp  sima_pcie_metadata_dump.cpp  sima_pcie_tensor_smoke.cpp  tensor_fast_paths.cpp  tensor_slow_path.cpp
pcie_host/python/: CMakeLists.txt  build_wheel.py
pcie_host/scripts/: install-local.sh  install_pciehost.sh  pcie-setup.sh  resolve_hardware_test_assets.sh
pcie_host/src/: HostPcieChannel.cpp  HostPcieChannel.h  HostPcieTensorPayload.cpp  HostPcieTensorPayload.h  HostPcieTensorSetMeta.cpp  HostPcieTensorSetMeta.h  Model.cpp  ModelOptionsJsonWriter.cpp  ModelOptionsJsonWriter.h  PcieModelFactsReader.cpp  PcieModelFactsReader.h  RemoteRuntime.cpp  RemoteRuntime.h  SimaPCIeHost.cpp  SshRunner.cpp  SshRunner.h
pcie_host/tests/: unit_pcie_host_caps_test.cpp  unit_pcie_host_lifecycle_test.cpp  unit_pcie_host_options_test.cpp  unit_pcie_host_ssh_runner_test.cpp  unit_pcie_host_tensor_test.cpp
python/: CMakeLists.txt
python/pyneat/: __init__.py  _wrappers.py  typing.py
python/src/: module.cpp
python/tests/: conftest.py  model_fixture_helpers.py  test_advanced_execution.py  test_api_surface.py  test_decode_bbox.py  test_detections.py  test_format_runtime.py  test_genai_bindings.py  test_graph_phase3_runtime.py  test_metadata_receiver_bindings.py  test_metadata_sender_bindings.py  test_model_introspection.py  test_neat_cli.py  test_optiview_bindings.py  test_pass_completion.py  test_phase1_ergonomics.py  test_phase4_nodes.py  test_power.py  test_real_model_fixtures.py  test_route_metadata.py  test_run_input_overloads.py  test_ssd_boxdecode_smoke.py  test_tensor_interop.py  test_torch_interop.py  test_tutorial_mipi_camera_input.py
tests/: CMakeLists.txt  asset_utils.h  cli_utils.h  graph_test_utils.h  gst_test_utils.h  inputstream_test_utils.h  model_archive_fixture_utils.h  model_archive_test_utils.h  mpk_fixture_utils.h  mpk_test_utils.h  neat_tensor_device_placement_test.cpp  optiview_test_utils.h  rtsp_port_utils.h  rtsp_probe_utils.h  runtime_test_utils.h  test_main.h  test_utils.h  udp_test_utils.h
tests/coherency/: CMakeLists.txt  README.md  coherency_devkit_suite.cpp  coherency_host_suite.cpp  coherency_test_support.h  run_devkit.sh  segment_coherency.cpp  segment_coherency.h
tests/docs/: build_docs_examples.sh
tests/e2e_pipelines/: e2e_utils.cpp  e2e_utils.h
tests/e2e_testing/: appsrc_videoconvert_fakesink_test.cpp  appsrc_videoscale_fakesink_test.cpp  async_stream_test.cpp  caps_negotiation_matrix_regression_test.cpp  codec_decode_accuracy_test.cpp  codec_runtime_stream_test.cpp  decoder_download_test.cpp  decoder_drop_on_resolution_change_test.cpp  decoder_dynamic_caps_test.cpp  decoder_quality_compare_test.cpp  decoder_visible_caps_test.cpp  file_read_test.cpp  genai_asr_run_test.cpp  genai_graph_asr_run_test.cpp  genai_graph_llm_run_test.cpp  genai_graph_vlm_run_test.cpp  genai_llm_run_test.cpp  genai_vlm_run_test.cpp  graph_deterministic_routing_regression_test.cpp  graph_naming_pipeline_integration_test.cpp  graph_rtsp_lifecycle_regression_test.cpp  graph_validate_report_regression_test.cpp  gst_data_adapter_runtime_regression_test.cpp  h265_decode_determinism_test.cpp  hybrid_graph_basic_test.cpp  hybrid_graph_bundle_test.cpp  hybrid_graph_fanout_test.cpp  hybrid_graph_stage_model_test.cpp  (+23 more)
tutorials/: CMakeLists.txt  build.sh  manifest.yaml  run_with_modelzoo.sh  tutorial_0001_quickstart_image_to_tensor.cpp  tutorial_0002_pipeline_session_build_run.cpp  tutorial_0003_nodes_and_groups.cpp  tutorial_0004_samples_and_neattensor.cpp  tutorial_0005_output_tensor_options.cpp  tutorial_0006_async_push_pull.cpp  tutorial_0007_caps_negotiation.cpp  tutorial_0008_input_groups.cpp  tutorial_0009_pipeline_save_load.cpp  tutorial_0010_diagnostics_debug.cpp  tutorial_0011_mpk_yolov8_pipeline.cpp  tutorial_0012_stage_api.cpp  tutorial_0013_model_resnet50.cpp  tutorial_0014_rtsp_server.cpp  tutorial_0015_multi_stream_multi_output.cpp  tutorial_0016_data_formats_and_mapping.cpp  tutorial_0017_neatmodel_end_to_end.cpp  tutorial_0018_async_queue_tuning.cpp  tutorial_0019_multi_output_bundle.cpp  tutorial_0020_debugging_workflow.cpp  tutorial_0021_output_appsink_policies.cpp  tutorial_0022_inputappsrc_advanced_caps.cpp  tutorial_0023_builder_graph_and_contracts.cpp  tutorial_0024_hybrid_graph.cpp  tutorial_0025_hybrid_multistream.cpp  tutorial_0026_send_and_receive_via_pcie.cpp  tutorial_0027_run_e2e_application_via_pcie.cpp  tutorial_common.h
(+1640 files in other folders)
